recipe detail — overflow styling fix

--- a/2023-recipe-website/styles/pages/recipe-detail.module.scss
+++ b/2023-recipe-website/styles/pages/recipe-detail.module.scss
@@ -36,7 +36,7 @@ $hero-height: 500px;
       top: 0;
       left: 50%;
       transform: translate(-50%);
-      width: 100vw;
+      width: 100%;
       height: 100%;
       background-color: $white;
     }
